--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>CSS Properties</title>
-    <link href="./resources/styles.css" rel="stylesheet" type="text/css" />
+    <link href="./styles.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -172,7 +172,7 @@
     </div>
     <footer>
       <div class="foot">
-        <img src="./resources/me1.png " />
+        <img src="./me1.png " />
         <p class="info">
           Michele Migliore<br />DOB: 07/25/2000 mikelemigliore@hotmail.com
           123-456-7890<br />
@@ -184,3 +184,4 @@
     </footer>
   </body>
 </html>
+
